# dcr

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  README.md  TODO.md  build.rs  flake.nix  install.sh
.github/: FUNDING.yml
.github/workflows/: dexoron-packages-index.yml  release.yml
docs/: SUMMARY.md
docs/commands/: dcr-build.md  dcr-run.md  dcr-test.md
docs/configuration/: build-section.md  dcr.toml-overview.md
docs/dependencies-and-build/: compilers-and-linking.md  cross-compilation.md  target-directory.md
docs/getting-started/: build-and-run.md  project-structure.md
src/: config.rs  main.rs
src/cli/: add.rs  build.rs  clean.rs  flag_update.rs  flags.rs  gen.rs  help.rs  init.rs  mod.rs  new.rs  run.rs  setup.rs  test.rs  tree.rs
src/core/: config.rs  deps.rs  mod.rs  registry.rs  runner.rs  workspace.rs
src/core/builder/: common.rs  gas.rs  mod.rs  msvc.rs  nasm.rs  unix_cc.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
src/utils/: build.rs  fs.rs  log.rs  mod.rs  text.rs
tests/: cli_basic.rs  cli_errors.rs
