[package]
name = "dcr"
version = "0.6.6"
edition = "2024"
build = "build.rs"

[dependencies]
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
self-replace = "1"
sha2 = "0.10"
toml = "1.0.3"
git2 = "0.20.4"
serde_json = "1"
ctrlc = "3"
openssl = { version = "0.10", features = ["vendored"] }