[package]
name = "dcr"
version = "0.6.9"
edition = "2024"
build = "build.rs"
description = "DCR is a utility for managing C/C++ projects in a Cargo-like style."
license = "GPL-3.0-or-later"
repository = "https://github.com/dexoron/dcr"

[package.metadata.binstall]
pkg-fmt = "bin"
pkg-url = "{ repo }/releases/download/v{ version }/dcr-{ target }-{ version }{ bin-suffix }"

[package.metadata.deb]
maintainer = "Dexoron (Bezotechestvo Vladimir) <main@dexoron.su>"
copyright = "2026, Dexoron"
extended-description = """
Cargo-like utility to manage C/C++ projects.
"""
section = "devel"
priority = "optional"
assets = [
    ["target/release/dcr", "usr/bin/dcr", "755"],
]

[package.metadata.generate-rpm]
summary = "Cargo-like utility to manage C/C++ projects"
description = """
Cargo-like utility to manage C/C++ projects.
"""

[package.metadata.generate-rpm.files]
"/usr/bin/dcr" = { source = "target/release/dcr", mode = "755" }

[dependencies]
glob = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
self-replace = "1"
sha2 = "0.10"
toml = "1.0.3"
serde_json = "1"
ctrlc = "3"
git2 = { version = "0.20.4", features = ["vendored-libgit2", "vendored-openssl"] }

[target.'cfg(not(windows))'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }